--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>G. Kulkarni (CV)</title>
+	<title>G. Kulkarni (personal webpage)</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -23,8 +23,9 @@
 	<img src="photo.jpg" width= 200px id="profile-pic">
 	<br>
 	<br>
+	<h1>Giridhar KULKARNI</h1>
 	<br>
-	<h1> Giridhar KULKARNI</h1>
+	<h3 class="under_const">⚠️ Site under construction</h3>
  </header>
 <main>
 	<div class="about">
@@ -47,7 +48,7 @@
 	A form-factor approach becomes as a powerful tool in its computations. But despite the interesting prospects it provides, the form-factor project has been realised only in select examples of some integrable models. This is because of inherent difficulties in their computations and the different approaches used to do so having limited scopes.
 	<br>
 	During my PhD with N. Kitanine as an advisor, we developed a new technique based on the algebraic Bethe ansatz that can allows us to compute the form-factors of the quantum spin chains in the thermodynamic limit. 
-	It was applied to the isotropic Heisenberg chain which led us to the exact result for the two-spinon form-factors at zero-temperature. We also found using this method a novel representations of the form-factors of the bound states that gives rise to a higher-level strucuture for the form-factors (yet to published).
+	It was applied to the isotropic Heisenberg chain which led us to the exact result for the two-spinon form-factors at zero-temperature. We also found using this method a novel representations of the form-factors of the bound states that gives rise to a higher-level strucuture for the form-factors <span class="info">(yet to be published)</span>.
 	<br>
 	The advantage of using the algebraic Bethe ansatz as an underlying framework of our computation is quite clear as it has wider scope of applicability. Among the prime examples of the models where it can be extended is the anisotropic XXZ model, including its massless regime in which it exhibits the critical behaviour due to its deep connections with the conformal field theory. My main point of interest currently lies in testing the applicability of our approach and the algebraic Bethe ansatz in general to more wider scenarios.
 	</p>
@@ -58,6 +59,8 @@
 				Kitanine, Nikolai, and <u>G. Kulkarni.</u> ‘Thermodynamic Limit of the Two-Spinon Form Factors for the Zero Field XXX Chain’. 
 				<i>SciPost Physics</i> 6, no. 6 (25 June 2019): 076. 
 				<a href="https://doi.org/10.21468/scipostphys.6.6.076">https://doi.org/10.21468/scipostphys.6.6.076</a>.
+			</li>
+			<li> <span class="info">Manuscript in preparation</span> 'On the asymptotic analysis of the the higher spinon form-factors of the XXX chain', coauthor: N. Kitanine 
 			</li>
 	</ol>
 	</cite>
