--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#research">Research</a></li>
             <li><a href="#teaching">Teaching</a></li>
             <li><a href="#programming">Programming</a></li>
-            <li><a href="./cv/cv.pdf">Curriculum Vitæ</a></li>
+            <li><a href="./cv/CV_KULKARNI_en.pdf">Curriculum Vitæ</a></li>
         </ul>
     </nav>
 	<!--<img src="glacier.JPG" width=100%>-->
