webpage updated post defence

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#research">Research</a></li>
             <li><a href="#teaching">Teaching</a></li>
             <li><a href="#programming">Programming</a></li>
-			<li><a href="./cv/CV_KULKARNI_en.pdf">CV <img src="download.png" height=20px></a></li>
+			<li><a href="./cv/CV_KULKARNI.pdf">CV <img src="download.png" height=20px></a></li>
         </ul>
     </nav>
 	<!--<img src="glacier.JPG" width=100%>-->
@@ -31,7 +31,7 @@
 	<div class="about">
 	<h2 id="about">About me</h2>
 	<p>
-		I am a researcher in mathematical physics working as a PhD student at <a href="https://math.u-bourgogne.fr/" target="_blank">University of Burgundy</a> in <a href="https://en.wikipedia.org/wiki/Dijon" target="_blank">Dijon, France</a> since 2016. I have worked on the form-factor computations of the quantum Heisenberg spin chains under the supervision of <a href="https://math.u-bourgogne.fr/equipe/kitanine-nikolai" targer="_blank">Nikolai Kitanine</a>. The defence is scheduled for 20th of November 2020. 
+		I am a researcher in mathematical physics with focus on quantum integrable systems. Previously, I was as a PhD student at <a href="https://math.u-bourgogne.fr/" target="_blank">University of Burgundy</a> in <a href="https://en.wikipedia.org/wiki/Dijon" target="_blank">Dijon, France</a> from 2016 to 2020. I have worked on the form-factor computations of the quantum Heisenberg spin chains under the supervision of <a href="https://math.u-bourgogne.fr/equipe/kitanine-nikolai" targer="_blank">Nikolai Kitanine</a>. I defended my thesis on 20th of November 2020. 
 	</p>
 	<aside>
 		<!--<span>-->
