--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="#teaching">Teaching</a></li>
             <li><a href="#programming">Programming</a></li>
 			<li><a href="./cv/CV_KULKARNI.pdf">CV <img src="download.png" height=20px></a></li>
+			<li><a href="./RS/RS.pdf">Research Statement <img src="download.png" height=20px></a></li>
         </ul>
     </nav>
 	<!--<img src="glacier.JPG" width=100%>-->
@@ -128,13 +129,14 @@
 	</div>
 	<br>
 	<h2 id="programming">Programming</h2>
-	I am also a programming enthusiast, familiar with the following languages/ packages in a non-exhaustive, still expanding list:
+	I am familiar with the following languages/ packages listed in a non-exhaustive, still expanding list:
 	<ol>
 		<li> C, C++, Python.</li>
 		<li> Mathematica, MATLAB</li>
 		<li> HTML, CSS, Javascript.</li>
 		<li> LaTeX, XeTeX, tikz.</li>
 		<li> git, regex.</li>
+	</ol>
 </main>
 <footer>
 	<ul>
