webpage updated -- forked into individual pages, RS added

--- a/programming.html
+++ b/programming.html
@@ -8,8 +8,8 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
-<body class="main">
- <header>
+<body>
+<header>
     <nav>
         <ul>
             <li><a href="index.html" target="_self">About</a></li>
@@ -19,22 +19,17 @@
 			<li><a href="./cv/CV_KULKARNI.pdf">CV <img src="download.png" height=20px></a></li>
         </ul>
     </nav>
-	<!--<img src="glacier.JPG" width=100%>-->
-	<img src="photo.jpg" width= 200px id="profile-pic">
-	<br>
-	<br>
-	<h1>Giridhar KULKARNI</h1>
-	<!--<br>-->
-	<!--<h3 class="under_const">⚠️ Site under construction</h3>-->
  </header>
 <main>
-	<div class="about">
-	<h2 id="about">About me</h2>
-	<p>
-		I am a researcher in mathematical physics with focus on quantum integrable systems. Previously, I was as a PhD student at <a href="https://math.u-bourgogne.fr/" target="_blank">University of Burgundy</a> in <a href="https://en.wikipedia.org/wiki/Dijon" target="_blank">Dijon, France</a> from 2016 to 2020. I have worked on the form-factor computations of the quantum Heisenberg spin chains under the supervision of <a href="https://math.u-bourgogne.fr/equipe/kitanine-nikolai" targer="_blank">Nikolai Kitanine</a>. I defended my thesis on 20th of November 2020. 
-	</p>
-	</div>
-	<br>
+	<h2 id="programming">Programming</h2>
+	I am familiar with the following languages/ packages listed in a non-exhaustive, still expanding list:
+	<ol>
+		<li> C, C++, Python.</li>
+		<li> Mathematica, MATLAB</li>
+		<li> HTML, CSS, Javascript.</li>
+		<li> LaTeX, XeTeX, tikz.</li>
+		<li> git, regex.</li>
+	</ol>
 </main>
 <footer>
 	This page was last updated on 4th December 2020.
